--- a/jsidplay2/src/libsidutils/sidid.cfg
+++ b/jsidplay2/src/libsidutils/sidid.cfg
@@ -48,8 +48,7 @@ A2 00 BD ?? ?? F0 6D FE ?? ?? D0 68 FE ?? ?? D0 63 BD ?? ?? 85 FE BD ?? ?? 85 FF
 41 35 2C 30 31 2C 32 39 2C 46 45 2C 38 35 2C 30 31 2C 41 44 2C 30 30 2C 41 30 2C 44 30 2C 30 39 END
 
 Andrew_Rodger
-8D 18 D4 AND 8D 05 D4 8D 06 D4 8D 0C D4 8D 0D D4 8D 13 D4 8D 14 D4 4C END
-8D 18 D4 AND 8D 05 D4 8D 06 D4 8D 0C D4 8D 0D D4 8D 13 D4 8D 14 D4 60 END
+BC ?? ?? B1 ?? F0 ?? 10 ?? 9D 04 D4 C8 FE ?? ?? B1 ?? 9D 01 D4 C8 FE ?? ?? D0 ?? 9D END
 
 Android
 9D 03 D4 AD ?? ?? 29 0F 0A 0A 0A 0A 9D ?? ?? 9D 02 D4 C8 B1 FB 29 FE 9D ?? ?? 9D 04 D4 C8 B1 FB 9D ?? ?? 9D 05 D4 C8 B1 FB 9D ?? ?? 9D 06 D4 END
@@ -63,12 +62,7 @@ Anthony_Lees
 BD ?? ?? 18 ?? ?? ?? 99 00 D4 A9 00 7D ?? ?? 99 01 D4 END
 
 Anvil
-99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 02 D4 BD AND 06 D4 BD ?? ?? 3D ?? ?? 99 04 D4 FE ?? ?? DE ?? ?? CA 30 03 4C END
-4C ?? ?? 8D 18 D4 60 B9 ?? ?? BC ?? ?? 99 04 D4 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? BC ?? ?? B1 ?? 30 0F 18 7D ?? ?? 9D ?? ?? C8 98 9D ?? ?? 4C END
-A9 ?? 8D ?? ?? A9 ?? 8D ?? ?? A9 ?? 8D 17 D4 A9 ?? 8D 18 D4 AD ?? ?? 8D ?? ?? 8D ?? ?? AD ?? ?? 8D ?? ?? 8D ?? ?? AD ?? ?? 8D ?? ?? 8D ?? ?? A2 ?? A9 ?? 9D ?? ?? A9 ?? 9D ?? ?? A9 ?? 9D ?? ?? CA 10 EE 60 END
-
-Ariston
-9D ?? ?? 20 ?? ?? CA 10 EF A0 ?? A9 ?? 99 00 D4 END
+29 3F 18 69 01 0A 9D ?? ?? C8 END
 
 Arne/AFL
 C9 FF D0 0B DE ?? ?? 10 03 4C ?? ?? 4C ?? ?? C9 B8 B0 08 29 3F 9D ?? ?? 4C ?? ?? C9 FB B0 16 38 E9 B8 48 0A 0A 0A 0A 0A 9D ?? ?? 68 4A 4A 4A 9D ?? ?? 4C ?? ?? C9 FC B0 08 A9 00 9D ?? ?? 4C END
@@ -84,9 +78,8 @@ Ash&Dave_Digi
 D0 41 E6 06 A5 06 29 01 F0 15 A0 00 C6 01 B1 02 E6 01 4A 4A 4A 4A 8D 18 D4 8D END
 
 Ashley_Hogg
-A9 ?? D0 ?? 8D 18 D4 60 09 10 8D 18 D4 AD ?? ?? F0 ?? CE ?? ?? D0 ?? 8D ?? ?? CE ?? ?? 2C ?? ?? 30 03 4C ?? ?? A9 00 8D ?? ?? A2 02 END
-A9 ?? D0 ?? 8D ?? ?? 60 09 10 8D ?? ?? AD ?? ?? F0 ?? CE ?? ?? D0 ?? CE ?? ?? AD ?? ?? 8D ?? ?? A2 02 8E ?? ?? DE ?? ?? 10 0A 4C ?? ?? 8D ?? ?? 8D ?? ?? 60 BD ?? ?? ?? AND 30 ?? BD END
-A9 ?? D0 ?? 8D 18 D4 8D ?? ?? 8D ?? ?? AD ?? ?? F0 13 A5 ?? D0 05 A9 00 4C ?? ?? A9 00 8D ?? ?? A9 ?? 8D ?? ?? 60 09 10 8D 18 D4 AD ?? ?? F0 0B CE ?? ?? D0 06 8D ?? ?? CE ?? ?? 2C ?? ?? 30 03 END
+EE ?? ?? 9D ?? ?? C8 B9 ?? ?? 85 ?? 84 ?? 29 7F A8 B9 ?? ?? 9D ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? 9D END
+BC ?? ?? D0 ?? 4C ?? ?? 88 98 D0 ?? 9D ?? ?? 9D ?? ?? BD ?? ?? BC ?? ?? 99 ?? ?? BD ?? ?? 99 END
 
 Asterion_V1.x
 4C ?? ?? 4C ?? ?? A9 00 AA A9 00 9D 05 D4 9D 06 D4 9D 04 D4 8A 18 69 07 C9 15 D0 EC 60 END
@@ -115,12 +108,13 @@ Bappalander/Spacelab1
 B1 B0 30 12 A0 00 B1 B2 30 16 C8 AA B1 B2 9D END
 
 Barry_Leitch
-0A 0A 0A 0A 99 02 D4 BC ?? ?? BD ?? ?? D0 ?? BD ?? ?? 99 04 D4 ?? FF END
-60 B1 ?? C8 C9 FF F0 1E 9D ?? ?? B1 ?? C8 9D END
-B9 ?? ?? 4A 4A 4A 4A 9D ?? ?? BC ?? ?? B9 ?? ?? 38 F9 ?? ?? 8D ?? ?? B9 ?? ?? F9 ?? ?? 8D ?? ?? AC ?? ?? F0 09 4E ?? ?? 6E ?? ?? 88 D0 F7 BD END
-38 A0 0D F1 ?? 9D ?? ?? 4C ?? ?? A0 08 B1 ?? 29 F0 F0 17 C9 C0 D0 06 BD ?? ?? 9D ?? ?? A0 0A B1 ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? BC ?? ?? BD ?? ?? 4A 4A 4A 4A END
+AD ?? ?? F0 ?? CE ?? ?? 4C ?? ?? AD ?? ?? 8D ?? ?? A2 02 BD ?? ?? F0 ?? DE END
+29 1F 8C ?? ?? DD ?? ?? 9D ?? ?? F0 ?? A8 END
 
-Basic_program
+Basic/Jim_Butterfield
+4C 31 B2 35 34 32 37 32 3A 4C 32 B2 35 34 32 37 39 3A 4C 33 B2 35 34 32 38 36 00 AND 31 B2 4C 31 AA 34 3A ?? 32 B2 4C 32 AA 34 3A ?? 33 B2 4C 33 AA 34 00 END
+
+Basic_Program
 97 35 34 32 37 32 END
 B2 35 34 32 37 32 END
 97 35 34 32 39 36 END
@@ -187,9 +181,7 @@ CheeseCutter_2.x
 0A 0A 0A A8 A2 00 8E AND C8 E8 E0 03 D0 ED B9 AND AD ?? ?? F0 2A B9 END
 
 Chris_Cox
-D0 ?? AE ?? ?? A9 00 9D 04 D4 AE ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? C9 64 B0 ?? 8D ?? ?? 18 6D ?? ?? 8D END
-A9 00 9D 04 D4 AE ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? C9 64 B0 ?? 8D ?? ?? 18 6D ?? ?? 8D ?? ?? AE ?? ?? AC ?? ?? AND B9 ?? ?? 9D 01 D4 B9 END
-A9 00 8D FB 03 EE FB 03 AD FB 03 C9 04 B0 ?? AA END
+A9 00 9D 04 D4 AE ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? C9 64 B0 END
 
 Chris_Grigg
 A9 00 99 00 D4 99 01 D4 BC END
@@ -223,6 +215,9 @@ B1 13 A0 36 84 01 85 17 4A 4A 4A 4A 8D 18 D4 A9 CD 8D 18 03 A4 11 AD 0D DD A5 10
 
 Comer/Sample_Studio
 A0 00 A2 30 86 01 B1 02 A2 37 86 01 85 ?? 4A 4A 4A 4A 8D 18 D4 A2 ?? CA D0 FD A5 END
+
+Computer_Hitware
+C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
 
 CRD_Tracker
 C0 80 D0 04 85 57 A9 00 85 26 E8 86 5E 88 84 65 18 A5 57 65 26 8D 16 D4 85 57 A2 00 20 END
@@ -394,6 +389,9 @@ B1 FB C9 40 90 0A 0A 0A 09 03 8D END
 Equalizer
 A9 00 8D ?? ?? AD ?? ?? 8D 17 D4 B9 ?? ?? 9D ?? ?? A9 ?? 9D ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? F0 2F BC ?? ?? A9 FF 99 05 D4 A9 0F 99 06 D4 A9 END
 
+Extra_Sound
+C9 FF D0 01 60 C9 FE D0 0E C8 B1 FB 9D END
+
 FAME
 9D ?? ?? BC ?? ?? B1 ?? 18 7D ?? ?? 9D 01 D4 A9 00 9D 00 D4 4C ?? ?? BD ?? ?? F0 03 4C ?? ?? BC ?? ?? B9 ?? ?? 30 BB F0 08 BD ?? ?? F0 12 DE ?? ?? BD ?? ?? 9D 00 D4 BD ?? ?? 9D 01 D4 4C END
 90 05 A9 08 99 04 D4 50 05 A9 0F 99 06 D4 BD ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? E0 00 D0 18 A9 00 F0 09 30 12 A9 80 8D ?? ?? A9 00 8D ?? ?? 8D ?? ?? A9 00 8D ?? ?? A9 FF END
@@ -560,8 +558,11 @@ A9 FF 9D ?? ?? A9 ?? 9D ?? ?? C8 B1 ?? C9 E0 F0 03 4C ?? ?? 4C ?? ?? 8D 17 D4 C8
 A9 00 9D ?? ?? FE ?? ?? 4C ?? ?? C9 E0 B0 0E 29 1F 9D ?? ?? 0A 0A 0A 9D ?? ?? 4C ?? ?? C9 E0 D0 13 C8 B1 ?? 9D ?? ?? C8 B1 ?? 18 7D ?? ?? 9D ?? ?? 4C ?? ?? C9 E1 D0 ?? A9 00 9D END
 
 Hans_Siemons
-BC ?? ?? B1 ?? 10 ?? C9 C0 B0 ?? C9 A0 90 ?? 29 1F 0A 8D ?? ?? 0A 0A 18 6D ?? ?? 9D END
-A2 17 A9 01 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 A9 08 8D 04 D4 8D 0B D4 8D 12 D4 AND 2C ?? ?? 70 ?? 30 ?? AD ?? ?? 4C END
+A2 17 A9 01 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 A9 08 8D 04 D4 8D 0B D4 8D 12 D4 END
+(Hans_Siemons_V1)
+29 F0 4A 4A 4A 4A 9D ?? ?? A6 ?? B9 ?? ?? 9D 05 D4 B9 ?? ?? 9D 06 D4 A9 08 9D 04 D4 END
+(Hans_Siemons_V2)
+BD ?? ?? 29 FE 9D ?? ?? BD ?? ?? 9D 04 D4 BD ?? ?? 18 7D END
 
 Harald_Rosenfeldt
 A9 69 8D 15 03 58 A9 0F 8D 18 D4 8D 38 D4 A9 00 8D FF 02 60 END
@@ -593,6 +594,13 @@ A9 00 85 B4 A9 50 85 B5 A9 A0 85 B6 A9 00 85 A9 END
 
 HouseDesign
 B9 ?? ?? 9D ?? ?? F0 03 9D ?? ?? A5 FB 29 04 F0 36 FE ?? ?? BC ?? ?? B9 ?? ?? DD ?? ?? F0 28 9D ?? ?? A9 00 9D ?? ?? BD ?? ?? C9 FF D0 08 A9 FF END
+
+Ian_Crabtree/Ariston
+AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 29 0F 48 A9 ?? 99 04 D4 END
+(Ariston_V1)
+9D ?? ?? 20 ?? ?? CA 10 EF A0 ?? A9 ?? 99 00 D4 END
+(Ariston_V2)
+AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 29 0F 48 A9 ?? 99 04 D4 BD ?? ?? 99 04 D4 BD END
 
 ICC/TheVoice
 60 BD ?? ?? D0 FA BC ?? ?? A9 01 9D ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? C8 B1 ?? C9 FF D0 E1 9D ?? ?? 60 A9 ?? D0 04 8D 18 D4 60 A9 ?? 8D 18 D4 END
@@ -743,6 +751,11 @@ C9 95 F0 4B C9 94 F0 76 C9 FE D0 03 4C END
 John_Player
 A9 00 A2 0C 95 ?? 9D 00 D4 9D 0B D4 CA 10 F5 END
 
+Jon_Dunn&Paul_Hughes
+AD ?? ?? F0 01 60 A9 ?? AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 ?? AND 4C ?? ?? 20 END
+BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
+F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
+
 KB/TOM
 3D ?? ?? 9D 04 D4 B9 ?? ?? 7D ?? ?? A8 B9 ?? ?? 18 7D ?? ?? 9D 00 D4 B9 ?? ?? 7D ?? ?? 9D 01 D4 4C ?? ?? 29 F7 3D ?? ?? 9D 04 D4 B9 ?? ?? 9D 01 D4 A9 00 9D 00 D4 BC ?? ?? DE END
 
@@ -828,7 +841,6 @@ E8 C8 C0 06 D0 F4 AD ?? ?? 85 ?? AD ?? ?? 85 ?? AD ?? ?? 0A 0A 18 6D ?? ?? 0A AA
 
 Mark_Wilson
 C9 1F F0 31 A4 F8 A9 00 99 04 D4 4C END
-9D ?? ?? 99 02 D4 68 4A 4A 4A 4A 9D ?? ?? 99 03 D4 BD ?? ?? AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 29 0F 48 A9 00 99 04 D4 BD ?? ?? 99 04 D4 BD END
 29 0F A6 F7 18 7D ?? ?? 4C ?? ?? BD ?? ?? D0 05 A9 0C 4C ?? ?? 4A 4A 4A 4A 4C ?? ?? A8 A6 F8 B9 ?? ?? 9D 00 D4 9D ?? ?? B9 ?? ?? 9D 01 D4 9D ?? ?? A6 F7 FE ?? ?? BD ?? ?? C9 03 D0 05 A9 00 9D END
 
 Martijn_Schutten
@@ -958,6 +970,9 @@ BC ?? ?? C8 20 ?? ?? C9 FF D0 02 A0 00 98 9D AND C8 B1 FA C9 FD F0 01 60 C8 B1 F
 (Music_Mixer_5)
 A9 F0 8D 17 D4 29 0F 8D A6 END
 
+Music_Studio/Lieblich
+0A A8 68 99 ?? ?? 68 29 C0 99 ?? ?? 48 48 68 68 A4 ?? C0 05 END
+
 Music_Works
 4C ?? ?? A9 00 8D ?? ?? A0 00 98 99 00 D4 C8 C0 07 D0 F8 A9 FF 9D ?? ?? A9 00 9D ?? ?? BD END
 
@@ -965,8 +980,7 @@ MusicShop
 AD D4 78 85 0A AD D5 78 85 0B A5 50 F0 13 A8 18 A5 0A 6D 52 79 85 0A END
 
 Neil_Baldwin
-AC ?? ?? BD ?? ?? D0 03 4C ?? ?? BD ?? ?? C9 02 D0 0B A9 01 9D ?? ?? BD ?? ?? 4C ?? ?? C9 01 D0 0B A9 00 9D ?? ?? BD ?? ?? 4C ?? ?? BD ?? ?? 9D END
-F0 06 DE ?? ?? 4C ?? ?? BD ?? ?? C9 02 D0 03 4C ?? ?? C9 01 D0 03 4C ?? ?? 4C ?? ?? 18 BD ?? ?? 7D ?? ?? 9D ?? ?? BD ?? ?? 69 00 9D ?? ?? FE ?? ?? BD ?? ?? DD ?? ?? F0 03 4C ?? ?? A9 00 9D ?? ?? A9 01 9D ?? ?? BD ?? ?? 18 0A 9D ?? ?? 4C END
+C9 01 D0 ?? A9 00 9D ?? ?? BD ?? ?? 4C ?? ?? BD ?? ?? 9D ?? ?? A9 00 9D ?? ?? BD ?? ?? 18 7D END
 
 Neil_Brennan
 DE ?? ?? F0 03 4C ?? ?? BD ?? ?? D0 ?? A9 01 END
@@ -1037,12 +1051,6 @@ Patrick_Payne
 
 Paul_Butler
 A8 BD ?? ?? 99 00 D4 E8 C8 C6 ?? 10 END
-
-Paul_Hughes
-AD ?? ?? F0 01 60 A9 ?? AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 ?? AND 4C ?? ?? 20 END
-BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
-F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
-4C ?? ?? C9 F0 90 08 29 0F 8D ?? ?? 4C ?? ?? C9 E0 90 0B 29 0F 8D 18 D4 8D ?? ?? 4C ?? ?? C9 C0 90 0B 29 1F 0A 0A 0A 9D ?? ?? 4C ?? ?? C9 80 90 08 29 3F 9D ?? ?? 4C ?? ?? C9 7F D0 0B A9 DE 9D END
 
 Paul_Norman/Cosmi
 C8 D0 02 E6 ?? B1 ?? AND 8D 00 D4 AND C8 D0 02 E6 ?? B1 AND 8D 08 D4 END
@@ -1200,6 +1208,9 @@ Song_Writer
 Sonic_Graffiti
 9D ?? ?? BC ?? ?? A9 00 99 05 D4 99 06 D4 4C ?? ?? A9 00 9D ?? ?? 9D ?? ?? 4C ?? ?? BC ?? ?? A9 00 99 05 D4 99 06 D4 4C ?? ?? AE ?? ?? BD ?? ?? DD ?? ?? F0 DC BD END
 
+Sorex_Digi
+B1 ?? C6 01 AND 8D 18 D4 ?? ?? CA D0 FD AND E6 ?? A5 ?? AND D0 E7 END
+
 Sosperec
 4C ?? ?? 8E ?? ?? BD ?? ?? 8D ?? ?? A9 80 8D ?? ?? A2 0F 8E ?? ?? ?? ?? ?? CA 20 ?? ?? A2 07 20 ?? ?? A2 00 8E ?? ?? 86 ?? 86 ?? 8E ?? ?? 8E 17 D4 8E 16 D4 A9 00 18 7D ?? ?? A8 B9 ?? ?? 9D END
 
@@ -1278,12 +1289,6 @@ Stephen_Ruddy
 Steve_Bak
 8D 01 D4 8E 00 D4 A9 21 8D 04 D4 4C END
 
-Steve_Barret
-20 ?? ?? AE ?? ?? AC ?? ?? BD ?? ?? 18 6D ?? ?? 9D ?? ?? 99 00 D4 BD ?? ?? 6D ?? ?? 9D ?? ?? 99 01 D4 BD ?? ?? F0 ?? 4A DD ?? ?? D0 ?? BC END
-BC ?? ?? A9 00 99 04 D4 99 05 D4 99 06 D4 99 03 D4 A9 ?? 99 02 D4 BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 29 0C F0 2B BD ?? ?? 29 08 F0 END
-99 00 D4 AD ?? ?? 9D ?? ?? 99 01 D4 BD ?? ?? 9D ?? ?? 99 02 D4 BD ?? ?? 9D ?? ?? 99 03 D4 BD ?? ?? AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 A9 00 99 04 D4 BD ?? ?? 29 01 F0 04 A9 ?? D0 03 BD END
-20 ?? ?? A9 ?? AC ?? ?? 48 29 F0 9D ?? ?? 99 02 D4 68 29 0F 9D ?? ?? 99 03 D4 BD ?? ?? F0 1F BD ?? ?? AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 A9 00 99 04 D4 BD END
-
 Steve_Day_Digi
 C6 01 C6 01 8D ?? ?? 4A 4A 4A 4A 8D 18 D4 EE END
 
@@ -1291,9 +1296,8 @@ Steve_Rowlands
 9D ?? ?? A5 ?? 9D ?? ?? A0 02 B1 ?? 85 ?? 68 18 6D ?? ?? 85 ?? A5 ?? 6D ?? ?? 85 ?? 68 68 4C ?? ?? 9D ?? ?? 60 20 ?? ?? 68 68 68 68 60 AD ?? ?? F0 ?? 20 ?? ?? A0 ?? B9 ?? ?? 99 00 D4 88 10 F7 END
 
 Steve_Turner
-A2 A5 F1 C8 91 A2 A0 02 91 A2 E6 9F A5 9F C9 03 END
-29 FE 99 04 D4 D6 C9 F0 03 4C ?? ?? D6 C6 18 B4 D2 BD ?? ?? 10 01 88 75 D5 95 D5 98 69 00 95 D2 B5 C6 C9 01 D0 09 BD ?? ?? 29 04 F0 2E D0 0A 29 END
-A4 A3 99 00 D4 A4 A2 B9 C1 00 79 C3 00 99 C1 00 END
+C9 ?? ?? ?? ?? ?? ?? 49 FF 18 69 01 ?? ?? ?? ?? ?? ?? 49 FF 69 00 END
+C9 ?? ?? ?? ?? ?? 49 FF 18 69 01 ?? ?? ?? ?? 49 FF 69 00 END
 
 Steven_Baumrucker
 8D 06 D4 A9 ?? 8D 0D D4 8D 14 D4 A9 ?? 8D 05 D4 A9 ?? 8D 0C D4 A9 ?? 8D 13 D4 A9 ?? 8D 18 D4 A9 END
@@ -1403,31 +1407,20 @@ A9 1F 8D 18 D4 2C ?? ?? 30 01 60 A9 00 8D ?? ?? ?? ?? BD ?? ?? 85 ?? A8 BD ?? ??
 AD ?? ?? F0 20 AD ?? ?? D0 1B BD ?? ?? D0 16 BD ?? ?? D0 11 A9 00 AC ?? ?? 99 04 D4 99 05 D4 99 06 D4 4C ?? ?? FE ?? ?? BD ?? ?? D9 ?? ?? F0 05 B0 ?? 4C ?? ?? B9 ?? ?? 29 01 F0 ?? B9 END
 
 Vibrants/JO
-BC ?? ?? C8 B1 F8 0A 0A 0A 9D END
-B1 F8 0A 0A 0A 9D ?? ?? FE ?? ?? FE END
-F0 09 01 9D ?? ?? B9 ?? ?? 48 B9 ?? ?? BC ?? ?? 99 06 D4 68 99 05 D4 68 29 0F 99 03 D4 END
-B1 FA C9 84 D0 1E BC ?? ?? C8 B1 FA 8D ?? ?? C8 B1 FA 8D ?? ?? C8 B1 FA 8D ?? ?? BD ?? ?? 18 69 04 9D ?? ?? BC ?? ?? B1 FA C9 85 D0 1E BC END
-C9 FE D0 09 A9 00 8D ?? ?? 8D 18 D4 60 C9 FF D0 06 A9 00 9D ?? ?? A8 B1 ?? C9 F0 D0 11 C8 B1 END
-BD ?? ?? 9D ?? ?? BC ?? ?? B9 ?? ?? 48 29 F0 8D ?? ?? 68 29 0F 0A 0A 0A 0A 8D ?? ?? BD ?? ?? 8D 16 D4 BC END
-A9 1F 8D 18 D4 A9 00 8D 17 D4 A9 01 8D ?? ?? 60 A9 ?? D0 01 60 A2 02 CE ?? ?? 10 06 AD ?? ?? 8D ?? ?? EE ?? ?? EE ?? ?? EE ?? ?? AD ?? ?? D0 05 DE ?? ?? 30 03 4C ?? ?? BD ?? ?? 8D ?? ?? BD END
-90 0B 29 1F 9D ?? ?? FE ?? ?? 4C ?? ?? BC ?? ?? B1 ?? C9 80 B0 0F C9 60 90 0B 29 1F 0A 0A 0A 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? C9 80 90 08 29 3F 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? 10 03 4C END
-8D 04 D4 8D 0B D4 8D 12 D4 60 8D ?? ?? AA 0A 18 69 00 0A END
-BC ?? ?? B1 ?? C9 FF D0 12 A9 00 9D ?? ?? DE ?? ?? D0 08 A9 01 9D ?? ?? FE ?? ?? BD ?? ?? 9D END
-D0 07 B9 ?? ?? C9 00 F0 02 09 01 9D ?? ?? B9 ?? ?? 29 80 10 06 B9 ?? ?? 9D ?? ?? B9 ?? ?? 48 B9 ?? ?? 29 0F 9D ?? ?? B9 ?? ?? BC ?? ?? 99 06 D4 68 99 05 D4 BD ?? ?? 99 03 D4 A9 FF 9D ?? ?? A9 END
-9D ?? ?? C8 B1 02 C9 D0 90 09 E9 D0 0A 0A 0A 9D ?? ?? C8 8C ?? ?? A9 00 9D ?? ?? 9D ?? ?? BC END
-9D ?? ?? BC ?? ?? B1 ?? C9 FF D0 12 A9 00 9D ?? ?? BD ?? ?? F0 05 DE ?? ?? 10 03 END
-BC ?? ?? B1 ?? C9 80 B0 0F C9 60 90 0B 29 1F 0A 0A 0A 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? C9 80 90 08 29 7F 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? 10 03 4C END
-30 1A BD ?? ?? 38 FD ?? ?? 8D ?? ?? BD ?? ?? 4A 4A 4A 4A F0 07 C9 ?? 90 03 4C ?? ?? BC ?? ?? B9 ?? ?? BC ?? ?? 38 F9 ?? ?? 8D ?? ?? 8D ?? ?? BC END
-4C ?? ?? A9 01 95 A9 ?? ?? ?? 9D ?? ?? 4C ?? ?? BC ?? ?? B9 ?? ?? 29 0F 38 E9 01 0A A8 B9 ?? ?? 85 C0 B9 ?? ?? 85 C1 B9 ?? ?? 85 C2 B9 ?? ?? 85 C3 BC ?? ?? B1 C0 C9 81 D0 09 BC ?? ?? C8 B1 END
-A9 08 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 01 D0 01 60 CE ?? ?? 10 05 A9 02 8D ?? ?? A2 02 FE ?? ?? AD ?? ?? F0 03 4C ?? ?? DE ?? ?? 30 03 4C ?? ?? BD ?? ?? 85 02 BD ?? ?? 85 03 BC ?? ?? B1 02 C9 END
-
-Volker_Struebing
-C9 FF D0 01 60 C9 FE D0 0E C8 B1 FB 9D END
+C9 80 D0 ?? BC ?? ?? C8 B1 END
+29 7F DD ?? ?? D0 ?? A9 ?? 9D ?? ?? FE ?? ?? FE END
+BC ?? ?? B1 ?? C9 F0 D0 ?? C8 B1 ?? 18 7D ?? ?? 9D ?? ?? C8 B1 ?? 9D ?? ?? FE ?? ?? FE ?? ?? FE END
+BC ?? ?? B1 ?? C9 FF D0 ?? A9 00 9D ?? ?? DE ?? ?? D0 ?? A9 01 9D ?? ?? FE END
+BC ?? ?? B1 ?? C9 60 90 ?? 38 E9 60 9D ?? ?? FE ?? ?? BC ?? ?? B1 ?? D0 ?? 9D ?? ?? FE END
+B9 ?? ?? 85 ?? DE ?? ?? ?? ?? BC ?? ?? B1 ?? C9 END
+A2 ?? CE ?? ?? 10 ?? AD ?? ?? 8D ?? ?? EE ?? ?? EE ?? ?? EE END
+C9 D0 90 ?? E9 D0 0A 0A 0A 9D END
+A2 02 BC ?? ?? A9 00 99 05 D4 99 06 D4 A9 08 99 04 D4 CA 10 ?? 60 END
 
 Wally_Beben/Ariston
-E9 00 9D ?? ?? 48 C9 08 B0 05 A9 00 9D ?? ?? ?? ?? ?? 68 99 03 D4 68 99 02 D4 CE ?? ?? 30 03 4C ?? ?? CE ?? ?? 10 06 AD ?? ?? 8D ?? ?? A9 FF 8D ?? ?? 60 A0 18 A9 00 99 00 D4 88 10 FA 60 BC END
-C9 C0 90 0F 29 1F 0A 0A 0A 9D ?? ?? B1 A7 C8 C9 FF F0 ?? C9 80 90 08 29 3F 9D ?? ?? B1 A7 C8 C9 END
-4C ?? ?? C9 F0 90 0B 29 0F 8D ?? ?? EE ?? ?? 4C ?? ?? C9 E0 90 08 29 0F 8D 18 D4 4C ?? ?? C9 C0 90 ?? 29 1F 0A 0A 0A 9D END
+48 C9 08 B0 ?? A9 ?? 9D ?? ?? AC ?? ?? 68 99 03 D4 68 99 02 D4 CE ?? ?? 30 END
+BD ?? ?? AA BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 A9 ?? 99 04 D4 BD ?? ?? 99 04 D4 END
+BD ?? ?? 99 04 D4 AE ?? ?? EE ?? ?? BD ?? ?? 18 END
 
 Walt/Bonzai
 49 01 9D ?? ?? BC ?? ?? BD ?? ?? 18 7D ?? ?? 99 00 D4 BD ?? ?? 7D ?? ?? 99 01 D4 END
@@ -1546,9 +1539,6 @@ AD ?? ?? ?? ?? ?? ?? ?? ?? F0 01 60 ?? ?? ?? F0 11 A9 00 ?? ?? ?? A8 B1 FB ?? ??
 
 ?Tork/Pulsar
 B1 02 C9 FE F0 3A C9 FF F0 3E C9 FD F0 24 C9 END
-
-?Song9
-C9 02 90 11 29 08 F0 38 AD DA 03 29 F4 8D DA 03 D0 2E 20 END
 
 ?Hoernell/Players
 E6 FB D0 02 E6 FC ?? A0 00 B1 FB C9 FF F0 28 END
